Fix the issue of login button not working on IE and FF browsers.

--- a/_sass/includes/_layout.scss
+++ b/_sass/includes/_layout.scss
@@ -630,6 +630,7 @@ label span {
 
 .view-sidebar {
   order: 1;
+  z-index: 99999;
   width: 0;
   @include w1000 {
     width: em(200);
